libwx-perl (1:0.9923-2) UNRELEASED; urgency=medium

  * Use $Config{vendorarch} in debian/rules instead of /usr/lib/perl5.
  * Refresh fix-fake-pod.patch (offset).

 -- gregor herrmann <gregoa@debian.org>  Mon, 11 Aug 2014 16:05:13 +0200

libwx-perl (1:0.9923-1) unstable; urgency=medium

  * Strip trailing slash from metacpan URLs.

  * New upstream release.
  * (Build-) depend on newer libalien-wxwidgets-perl to get dependency on
    wxwidgets3.0. (Closes: #743280)
  * Add a lintian override for a spelling mistake in a variable name.
  * debian/copyright: fix URL of original wxWindows Library Licence.
  * Declare compliance with Debian Policy 3.9.5.

 -- gregor herrmann <gregoa@debian.org>  Tue, 01 Apr 2014 19:36:23 +0200

libwx-perl (1:0.9922-2) unstable; urgency=low

  * Make (build) dependency on libalien-wxwidgets-perl versioned.
    (Closes: #719380)
  * Update and forward fix-man-spelling patch.

 -- gregor herrmann <gregoa@debian.org>  Mon, 19 Aug 2013 14:20:49 +0200

libwx-perl (1:0.9922-1) unstable; urgency=low

  [ Salvatore Bonaccorso ]
  * Change Vcs-Git to canonical URI (git://anonscm.debian.org)
  * Change search.cpan.org based URIs to metacpan.org based URIs

  [ Dominique Dumont ]
  * Imported Upstream version 0.9922
  * added patch to fix Wx man page spelling errors
  * copyright: updated year
  * control:
    * refreshed with cme
    * cleaned up versioned dependencies
    * bumped Standards-Version: 3.9.4
    + added /me in uploader
    - removed ryan

 -- Dominique Dumont <dod@debian.org>  Thu, 02 May 2013 20:43:23 +0200

libwx-perl (1:0.9911-1) unstable; urgency=low

  * New upstream release

 -- Alessandro Ghedini <ghedo@debian.org>  Sun, 02 Sep 2012 17:06:37 +0200

libwx-perl (1:0.9909-1) unstable; urgency=low

  * New upstream release

 -- Alessandro Ghedini <ghedo@debian.org>  Thu, 31 May 2012 21:48:06 +0200

libwx-perl (1:0.9908-1) unstable; urgency=low

  * New upstream release
