@@ -1,7 +1,13 @@
 libwx-perl (1:0.9923-2) UNRELEASED; urgency=medium
 
+  [ gregor herrmann ]
   * Use $Config{vendorarch} in debian/rules instead of /usr/lib/perl5.
   * Refresh fix-fake-pod.patch (offset).
+
+  [ Niko Tyni ]
+  * Depend on the virtual package wxperl-<key>, now provided by
+    libalien-wxwidgets-perl, to avoid version skew between the
+    packages. (Closes: #757855)
 
  -- gregor herrmann <gregoa@debian.org>  Mon, 11 Aug 2014 16:05:13 +0200
 
